// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> with default props 1`] = `
<div
  className={undefined}
  onClick={[Function]}
>
  ...
</div>
`;

exports[`<Button/> with some props 1`] = `
<div
  className={undefined}
  onClick={[Function]}
>
  TEXT
</div>
`;
